--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					</div>
 				</form>
 				<div class="credits">
-					Passionately built by Ravi Rohith.
+					Made with heart by Ayush Raj .
 				</div>
 			</div>
 		</div>
